corrects size and mobile size for avatar group and truncatation tool name

--- a/app/components/AvataGroup/AvatarGroup.module.scss
+++ b/app/components/AvataGroup/AvatarGroup.module.scss
@@ -8,20 +8,9 @@
     }
 }
 
-// body {
-//     font-family: 'Inter', sans-serif;
-//     min-height: 100vh;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-// }
-/* end: Global */
 
-/* start: Avatar */
 .avatar_group {
     display: flex;
-    // align-items: center;
-    // justify-content: center;
     position: static;
 }
 
@@ -31,7 +20,10 @@
 }
 
 .avatar:not(:first-child) {
-    margin-left: -1rem;
+    margin-left: -9px;
+    @media (max-width:480px) {
+        margin-left: -4.8px;
+    } 
 }
 
 .avatar:hover:not(:last-child) {
@@ -61,18 +53,22 @@
 }
 
 .avatar_image {
-    width: 2rem;
-    height: 2rem;
+    width: 31.12px;
+    height: 31.12px;
     display: block;
     object-fit: cover;
     border-radius: 50%;
     border: 1px solid white;
     // box-shadow: 0.25rem 0.25rem 0.25rem rgba($color: #000000, $alpha: .10);
+    @media (max-width:480px) {
+        width: 16.6px;
+        height: 16.6px;
+    } 
 }
 
 .avatar_rest {
-    width: 2rem;
-    height: 2rem;
+    width: 31.12px;
+    height: 31.12px;
     border-radius: 50%;
     background-color: #7A7A7A;
     // box-shadow: 0.25rem 0.25rem 0.25rem rgba($color: #000000, $alpha: .10);
@@ -81,5 +77,11 @@
     justify-content: center;
     align-items: center;
     color: white;
-    font-size: 0.7rem;
+    font-size: 19.47px;
+    pointer-events: none;
+    @media (max-width:480px) {
+        width: 16.6px;
+        height: 16.6px;
+        font-size: 10.38px;
+    } 
 }
