--- a/app/components/TruncateTools/TruncateTools.module.scss
+++ b/app/components/TruncateTools/TruncateTools.module.scss
@@ -7,6 +7,12 @@
   display: inline-block;
   padding: 5px;
   cursor: pointer;
+  font-family: Inter;
+  font-weight: 500;
+  font-style: Medium;
+  font-size: inherit;
+  line-height: 100%;
+  letter-spacing: 0%;
 }
 
 .tooltip_text {
